--- a/html/css/app.css
+++ b/html/css/app.css
@@ -806,12 +806,30 @@ a.comment-delete{
 	text-align: left;
 }
 
-span.team-label{
+span.team-label, span.event-sport-label{
     display: inline-block;
     margin-left:100px;
     font-family: 'Nunito','HelveticaNeue';
     font-weight: bolder;
     font-size: 1.1em;
+}
+a.add-event-h.right-with-icon, a.add-game-h.right-with-icon{
+    font-size: 1em;
+    background-repeat: no-repeat;
+    padding:0 0 0 35px;
+    color:#333;
+    display: inline-block;
+    min-height: 25px;
+    margin:0px 75px 5px 15px;
+    float:right;
+    position: relative;
+    bottom:5px;
+}
+a.add-event-h{
+
+}
+a.add-game-h{
+    background-image: url(http://cdn.athletez.com/resources/img/court.png);
 }
 .game-box-outer ul {
     background: #bbbbbc;
