--- a/html/packages/game-schedules/templates/schedule-item.html
+++ b/html/packages/game-schedules/templates/schedule-item.html
@@ -1,28 +1,25 @@
 {{#payload}}
 	<div class="select-team">
 	{{#teams}}
-			<div class="org-name">
-				<a href="/#team/{{team_id}}"><span class="team-label">{{org_name}} | {{complevel}} | {{season}} {{year}}</span></a>
-				{{^schedules}}
-					<span>&nbsp;(No games on the docket)</span>
+		<div class="org-name">
+			<a href="/#team/{{team_id}}"><span class="team-label">{{org_name}} | {{complevel}} | {{season}} {{year}}</span></a>
+			<a href="javascript: void(0);" data-team-id="{{team_id}}" data-sport-id="0" title="add game" class="add-game-h right-with-icon">Add Game</a>
+			<!--<a href="javascript: void(0);" data-sport-id="0" title="add team" class="add-event-h">Click here to Add Event.</a>-->
+		</div>
+			<div class="game-box-outer">
+				<ul>
+				{{#schedules}}
+					<li data-game-id="{{id}}">
+						<a href="#game/{{id}}" data-team-id="{{team_id}}" class="{{#isWinner}}win{{/isWinner}}{{^isWinner}}background-blue{{/isWinner}} team-info-h">
+							<div class="game-info hide">
+								<span class="game-day">{{gameDay}}</span>{{#teams}}<span class="team-name" data-winner="{{isWinner}}" data-team-id="{{id}}">
+								&nbsp; vs. {{team_name}}</span>{{/teams}}
+								<span class="game-score">{{#teams}}{{#points_scored}}<span class="team-score {{#isWinner}}win{{/isWinner}}{{^isWinner}}loss{{/isWinner}}">{{points_scored}}</span>{{/points_scored}}{{/teams}}</span>
+							</div>
+						</a>
+					</li>
 				{{/schedules}}
-				<a href="javascript: void(0);" data-team-id="{{team_id}}" data-sport-id="0" title="add game" class="add-game-h">Add Game</a>
-				<!--<a href="javascript: void(0);" data-sport-id="0" title="add team" class="add-event-h">Click here to Add Event.</a>-->
-			</div>
-				<div class="game-box-outer">
-			<ul>
-					{{#schedules}}
-						<li data-game-id="{{id}}">
-							<a href="#game/{{id}}" data-team-id="{{team_id}}" class="{{#isWinner}}win{{/isWinner}}{{^isWinner}}background-blue{{/isWinner}} team-info-h">
-								<div class="game-info hide">
-									<span class="game-day">{{gameDay}}</span>{{#teams}}<span class="team-name" data-winner="{{isWinner}}" data-team-id="{{id}}">
-									&nbsp; vs. {{team_name}}</span>{{/teams}}
-									<span class="game-score">{{#teams}}{{#points_scored}}<span class="team-score {{#isWinner}}win{{/isWinner}}{{^isWinner}}loss{{/isWinner}}">{{points_scored}}</span>{{/points_scored}}{{/teams}}</span>
-								</div>
-							</a>
-						</li>
-					{{/schedules}}
-				</ul>
+			</ul>
 		</div>
 	{{/teams}}
 	</div>
