--- a/html/packages/sportorg/templates/org-item.html
+++ b/html/packages/sportorg/templates/org-item.html
@@ -1,17 +1,10 @@
-{{#payload}}<div class="select-team">
-	
+{{#payload}}
+<div class="select-team">
 {{#teams}}
-			
 		<div class="org-name">
 			<span class="team-label">{{org_name}} | {{complevel}} | {{season}} {{year}}</span>
-			{{^schedules}}
-				<span>&nbsp;(No games on the docket)</span>
-			{{/schedules}}<a href="javascript: void(0);" data-team-id="{{team_id}}" data-sport-id="0" title="add game" class="add-game-h">Add Game</a>
+			<a href="javascript: void(0);" data-team-id="{{team_id}}" data-sport-id="0" title="add game" class="add-game-h right-with-icon">Add Game</a>
 		</div>
-
-
-			
-			
 		<div class="game-box-outer">
 		<ul>
 		{{#schedules}}
