--- a/html_build/packages/game-schedules/templates/schedule-single-item.html
+++ b/html_build/packages/game-schedules/templates/schedule-single-item.html
@@ -1,5 +1,9 @@
-
-	<a href="/#game/{{id}}" class="background-blue team-info-h" tooltip="test">
+{{#payload}}
+<a href="#game/{{id}}" data-team-id="{{teams_id}}" class="background-blue team-info-h">
 	<div class="game-info hide">
-		{{summary}}
-	</div> </a>
+		<span class="game-day">{{gameDay}}</span>{{#teams}}<span class="team-name" data-winner="{{isWinner}}" data-team-id="{{id}}">
+									&nbsp; vs. {{team_name}}</span>{{/teams}}
+		<span class="game-score">{{#teams}}{{#points_scored}}<span class="team-score {{#isWinner}}win{{/isWinner}}{{^isWinner}}loss{{/isWinner}}">{{points_scored}}</span>{{/points_scored}}{{/teams}}</span>
+	</div>
+</a>
+{{/payload}}
