--- a/html/packages/site/templates/comment-item.html
+++ b/html/packages/site/templates/comment-item.html
@@ -1,6 +1,6 @@
 
 {{#payload}}
-<div class="row-fluid" data-id="bbbbbbbb">
+<div class="row-fluid">
     <div class="user-photo">
     	<a href="#profile/{{user.id}}" title="{{user.name}}">
     		<img src="{{base_url}}{{poster_picture}}" alt="{{poster}}" />
