--- a/html/pages/game/templates/layout.html
+++ b/html/pages/game/templates/layout.html
@@ -16,6 +16,10 @@
 	
 	<div id="roster-wrap" class="clearfix clear"></div>
 	
+	<div class="green-left-heading participants-heading-h hide">PARTICIPANTS</div>
+	<div id="participants_div" class="clearfix clear"></div>
+
+	
 	<div class="row-fluid">
 		<div class="span4" id="main-sidebar">
 			<div id="org-wrap" class="clearfix hide"></div>
