--- a/html/pages/signup/templates/basciFinal.html
+++ b/html/pages/signup/templates/basciFinal.html
@@ -74,6 +74,12 @@
 						</div>	
 						<input type="password" name="re_password" id="re_password" placeholder="Password" />
 					</div>
+					
+					<div>
+						<input type="checkbox" name="re_terms_conditions" class="terms-condition terms-condition-h" />
+						<a href="javascript: void(0);">Terms and condition</a>
+					</div>
+					
 					</div>
 					<div id="submitbutton">
 						<input type="submit" name="create" value="Sign Up" class="regsubmitfinal" />
