--- a/html/pages/signup/templates/basciFinal.html
+++ b/html/pages/signup/templates/basciFinal.html
@@ -18,7 +18,7 @@
 							<label for="Name">Name</label>
 						</div>
 						<input type="text" id="first_name" name="Name" placeholder="Name" />
-						<a id="editname">edit</a>
+						<a id="editname" class="hide">edit</a>
 					</div>
 					<div class="seconddiv" id="dob">
 						<div class="label">
@@ -40,13 +40,13 @@
 							<input type="radio" id="male" name="gender" value="M">
 						</div>
 						<div class="radio">
-							<label for="male">male</label>
+							<label for="male">Male</label>
 						</div>
 						<div class="radioinput" id="radioinput">
 							<input type="radio" id="Female" name="gender" value="F">
 						</div>
 						<div class="radio">
-							<label for="female">female</label>
+							<label for="female">Female</label>
 						</div>
 						
 					</div>
@@ -56,9 +56,9 @@
 						</div>
 						<div class="Role" id="Role">
 							<div class="radioinput"><input type="radio" id="athlet" name="athlet" value="A"></div>
-							<div class="radio"><label for="athlet">an athlet</label></div>
+							<div class="radio"><label for="athlet">An Athlete</label></div>
 							<div class="radioinput"><input type="radio" id="Fan" name="athlet" value="F"></div>
-							<div class="radio"><label for="fan">a fan</label></div>
+							<div class="radio"><label for="fan">A Fan</label></div>
 						</div>
 					
 					</div>
