--- a/html/pages/signup/css/signupstyle.css
+++ b/html/pages/signup/css/signupstyle.css
@@ -172,7 +172,7 @@
 		
 		
 		.label{
-			width: 123px;
+			width: 100px;
 			position: relative;
 			float: left;
 			color:black;
@@ -182,11 +182,11 @@
 			padding-bottom: 10px;
 		}
 		#finalreg input{
-			width: 180px;
+			width: 235px;
 			height: 30px;
 			background-color: #E4E3E9;
 			border: 0;
-			border-radius: 4px;
+			border-radius: 0;
 		}
 		#radioinput input{
 			width: 21px;
@@ -286,5 +286,5 @@
 
 .terms-condition {
 	width: 30px !important;
-	margin-left: 128px !important;
+	margin-left: 107px !important;
 }
