--- a/html/pages/profile/templates/sport-team.html
+++ b/html/pages/profile/templates/sport-team.html
@@ -1,4 +1,10 @@
 {{#records}}
-    <a href="/#team/{{payload.id}}">{{#payload.team_name}}{{payload.team_name}}{{/payload.team_name}}</a><br />
+	<div>{{payload.name}}</div>
+	{{#payload.sports}}
+	{{#teams}}
+	    <a href="/#team/{{id}}">{{complevel}} | {{season}}| {{year}}</a>
+    {{/teams}}
+    {{/payload.sports}}
+    <br/>
 {{/records}}
 
