--- a/html/pages/signup/templates/basciFinal.html
+++ b/html/pages/signup/templates/basciFinal.html
@@ -36,17 +36,17 @@
 						<div class="label">
 							<label for="Name">Gender</label>
 						</div>	
-						<div class="radioinput" id="radioinput">
+						<div class="radioinput" id="radioinput1">
 							<input type="radio" id="male" name="gender" value="M">
 						</div>
 						<div class="radio">
 							<label for="male">Male</label>
 						</div>
-						<div class="radioinput" id="radioinput">
+						<div class="radioinput" id="radioinput2">
 							<input type="radio" id="Female" name="gender" value="F">
 						</div>
 						<div class="radio">
-							<label for="female">Female</label>
+							<label for="Female">Female</label>
 						</div>
 						
 					</div>
@@ -58,7 +58,7 @@
 							<div class="radioinput"><input type="radio" id="athlet" name="athlet" value="A"></div>
 							<div class="radio"><label for="athlet">An Athlete</label></div>
 							<div class="radioinput"><input type="radio" id="Fan" name="athlet" value="F"></div>
-							<div class="radio"><label for="fan">A Fan</label></div>
+							<div class="radio"><label for="Fan">A Fan</label></div>
 						</div>
 					
 					</div>
