--- a/html/packages/site/templates/comment-form.html
+++ b/html/packages/site/templates/comment-form.html
@@ -4,7 +4,8 @@
 <form class="add-comment-form-h hide" method="post" action="#">
 <div class="row-fluid">
     <div class="field-message submit-result"></div>
-    <textarea style="width:85%;-webkit-border-radius: 15px; border-radius: 15px; height: 65px;" id="new-comment" placeholder="{{comment_placeholder}}" ></textarea>
+    <textarea style="width:85%;-webkit-border-radius: 15px; border-radius: 15px; height: 20px;
+	margin-top: 4%;" id="new-comment" placeholder="Leave a comment" ></textarea>
     <br/><input type="button" id="comment-submit" value="Submit"/>
 </div>
 </form>
