--- a/html/usercontrols/photo-player/templates/comments.html
+++ b/html/usercontrols/photo-player/templates/comments.html
@@ -1,4 +1,5 @@
 
+
 {{#payload}}
 <div class="photo-player-coment"> 
 	<div class="user-photo">
@@ -6,6 +7,7 @@
 	</div> 
     <div class="content">
     	<!--span class="comment-date">{{poster}} {{comment_date}}</span-->
+    	<span class="user-comment">{{user.first_name}} </span>
     	<p class="comment-text">{{comment}}</p>
     </div>
 </div>
