--- a/html/usercontrols/photo-player/templates/tag-item.html
+++ b/html/usercontrols/photo-player/templates/tag-item.html
@@ -1,6 +1,13 @@
-<div class="row-fluid">
+
+<!--<div class="row-fluid">
     <div class="tags-name">
-		<span><a href="{{_link}}" title="{{{_label}}}"><img src="{{_thumbnail}}" /><span>{{{_label}}}</span></a></span>
-		<span class="tags-number">{{count}}10</span>
+    	<span>
+		<img src="{{_thumbnail}}" />
+			<!--<a href="{{_link}}" title="{{{_label}}}">
+				
+				<span class="labelSpan">{{{_label}}}</span>
+							<!--</a>
+		</span>
+		<span class="tags-number">{{count}}</span>
     </div>
-</div>
+</div>-->
