--- a/html/pages/signup/css/signupstyle.css
+++ b/html/pages/signup/css/signupstyle.css
@@ -14,7 +14,6 @@
 			margin-left: 18%;
 			text-align: center;
 			color: white;
-			font-family: Tahoma;
 			font-size: 16px;
 			font-weight: bold;
 			cursor: pointer;
@@ -36,7 +35,6 @@
 			background-color: #FFFFFF;
 			border-style: none;
 			color: #68686A;
-			font-family: Tahoma;
 			font-size: 16px;
 			font-weight: bold;
 			height: 29px;
@@ -88,7 +86,6 @@
 			background-color: #E4E3E9;
     		border-style: none;
     		color: #68686A;
-    		font-family: Tahoma;
     		font-size: 16px;
     		font-weight: bold;
     		height: 38px;
@@ -146,12 +143,11 @@
 		.regsubmitfinal{
 			background-color: #1BA0AF;
 			width: 224px;
-			height: 51px;
-			margin-left: 38px;
+			height: 35px;
 			color: white;
 			font-size: 20px;
 			border-style: none;
-			margin-left: 69%;
+
 		}
 		#fblogo{
 			background-image: url(new-facebook-logo.png);
@@ -164,7 +160,6 @@
 		#regor{
 			text-align: center;
 			padding-top: 14px;
-			font-family: Tahoma;
 			font-size: 16px;
 			font-weight: bold;
 			color: #68686A;
@@ -179,11 +174,11 @@
 			background-color: white;
 		}
 		.firstdiv,.seconddiv,.thirddiv,.fourthdiv,.fifthdiv,.sixthdiv,.seventhdiv{
-			padding-bottom: 10px;
+
 		}
-		#finalreg input{
+		#finalreg input[type="text"]{
 			width: 235px;
-			height: 30px;
+			height: 20px;
 			background-color: #E4E3E9;
 			border: 0;
 			border-radius: 0;
@@ -195,11 +190,7 @@
 			border: 0;
 			border-radius: 4px;
 		}
-	
-		#finalreg{
-			color: #6B6F72;
-			font-family: Tahoma;
-		}
+
 		#gender input, #Role input{
 			width: 20px;
 		}
