--- a/html/packages/vote/templates/vote.html
+++ b/html/packages/vote/templates/vote.html
@@ -1,2 +1,4 @@
-<a href="javascript:void(0);" class="team-action-h">Vote</a>
-<a href="javascript:void(0);" class="follow-action-h">Follow</a>
+{{#payload}}
+<a href="javascript:void(0);" class="{{#has_voted}}team-noaction-h{{/has_voted}}{{^has_voted}}team-action-h{{/has_voted}}">Vote</a>
+<a href="javascript:void(0);" class="{{#is_following}}follow-noaction-h{{/is_following}}{{^is_following}}follow-action-h{{/is_following}}">Follow</a>
+{{/payload}}
