--- a/html/pages/signup/templates/basciFinal.html
+++ b/html/pages/signup/templates/basciFinal.html
@@ -33,31 +33,27 @@
 						<input type="text" name="email" id="emailInput" placeholder="Email" />
 					</div>
 					<div class="fourthdiv">
+
 						<div class="label">
-							<label for="Name">Gender</label>
-						</div>	
-						<div class="radioinput" id="radioinput1">
-							<input type="radio" id="male" name="gender" value="M">
+							<label for="Gender">Gender</label>
 						</div>
-						<div class="radio">
-							<label for="male">Male</label>
-						</div>
-						<div class="radioinput" id="radioinput2">
-							<input type="radio" id="Female" name="gender" value="F">
-						</div>
-						<div class="radio">
-							<label for="Female">Female</label>
+						<div class="Gender" id="Gender">
+
+							<div class="radioinput" id="radioinput1"><input type="radio" id="male" name="gender" value="M"></div>
+							<div class="radio"><label for="male">Male</label></div>
+							<div class="radioinput" id="radioinput2"><input type="radio" id="Female" name="gender" value="F"></div>
+							<div class="radio"><label for="Female">Female</label></div>
 						</div>
 						
 					</div>
 					<div class="fifthdiv">
 						<div class="label">
-							<label for="Name">I am</label>
+							<label>I am</label>
 						</div>
 						<div class="Role" id="Role">
-							<div class="radioinput"><input type="radio" id="athlet" name="athlet" value="A"></div>
-							<div class="radio"><label for="athlet">An Athlete</label></div>
-							<div class="radioinput"><input type="radio" id="Fan" name="athlet" value="F"></div>
+							<div class="radioinput"><input type="radio" id="athlete" name="role" value="A" /></div>
+							<div class="radio"><label for="athlete">An Athlete</label></div>
+							<div class="radioinput"><input type="radio" id="Fan" name="role" value="F"></div>
 							<div class="radio"><label for="Fan">A Fan</label></div>
 						</div>
 					
@@ -77,7 +73,7 @@
 					
 					<div>
 						<input type="checkbox" name="re_terms_conditions" class="terms-condition terms-condition-h" />
-						<a href="javascript: void(0);">Terms and condition</a>
+						I Accept<a href="tos.html" target="_blank">Terms and Conditions</a>
 					</div>
 					
 					</div>
@@ -86,7 +82,7 @@
 					</div>	
 				</form>
 				
-			<%  if(!page) { %>	
+			<%  if(!page) { %>	<br /><br/>
 				<div id="reglogin">
 					<span>Been here before <a href="#">sign in</a></span>
 				</div>
