--- a/html_build/css/app.css
+++ b/html_build/css/app.css
@@ -557,6 +557,7 @@ a.comment-delete{
     float:right;
 }
 .profile-heading div.sports-h img{
+	cursor: pointer;
     max-width: 70px;
     max-height: 50px;
 }
