--- a/html_build/pages/signup/templates/layout.html
+++ b/html_build/pages/signup/templates/layout.html
@@ -19,5 +19,9 @@
 	</div>
 
 	<div id="main-contentreg"></div>
+	<div class="modal-body">
+		<div id="errormsg"></div>
+		<div id="preview"></div>
+	</div>
 
 </div>
