--- a/html/pages/imageup/imageup.css
+++ b/html/pages/imageup/imageup.css
@@ -98,6 +98,11 @@
     height: 35%;
 }
 
+#main-content-img.video{
+    float: none;
+    height: auto;
+}
+
 #image-tagging{
     width: 92%;
     float: left;
