update for image grid and new build.

--- a/html/packages/media/templates/image-item.html
+++ b/html/packages/media/templates/image-item.html
@@ -2,7 +2,7 @@
 	<div class="image-item-container">
 		{{#_thumbnail}}<img class="list-thumbnail" src="{{_thumbnail}}" alt=""/>{{/_thumbnail}}
 		{{^_thumbnail}}
-			<div class="game-tile">VS</div>
+			<div class="game-tile">{{_noicon_text}}</div>
 		{{/_thumbnail}}
 		<div class="action-section">
 			{{#show_edit}}
