--- a/html_build/pages/imageup/imageup.css
+++ b/html_build/pages/imageup/imageup.css
@@ -82,6 +82,10 @@
     float: left;
     height: 35%;
 }
+#main-content-img.video{
+    float: none;
+    height: auto;
+}
 #image-tagging{
     width: 92%;
     float: left;
