--- a/html_build/pages/videopreview/templates/basic.html
+++ b/html_build/pages/videopreview/templates/basic.html
@@ -5,9 +5,11 @@
 		<h3 id="label">Video Uploader</h3>
 	</div>
 
-	<div id="main-content-img"></div>
+
 
 	<div class="modal-body">
+		<div id="main-content-img" class="video"></div>
+
 		<div id="errormsg"></div>
 		<div id="preview"></div>
 	</div>
