--- a/html/pages/team/templates/header.html
+++ b/html/pages/team/templates/header.html
@@ -6,6 +6,8 @@
             <h3 class="username">{{org_sport_link_obj.org.org_name	}}</h3>
             <h4>{{org_sport_link_obj.sport.sport_name}} | {{complevels_obj.complevel_name}} | {{seasons_obj.season_name}} '{{year}}</h4>
             <a href="javascript: void(0);" title="Edit Team">Edit Team</a>
+            
+            <div id="vote-view"></div>
     </div>
 	
     <!--div class="span4 textcenter">
