--- a/html/usercontrols/photo-player/photoPlayer.css
+++ b/html/usercontrols/photo-player/photoPlayer.css
@@ -310,7 +310,7 @@ ul#tags-list .tags-number {
         background-color: #948BDE;
         color: white;
         height: 45px;
-        font-family: serif;
+        //font-family: serif;
         font-size: small;
         
     }
@@ -331,7 +331,7 @@ ul#tags-list .tags-number {
         width: 70%;
         color: white;
         height: 45px;
-        font-family: serif;
+        //font-family: serif;
         font-size: small;
         
     }
@@ -355,7 +355,7 @@ ul#tags-list .tags-number {
         position: relative;
     }
     .labelSpan{
-        font-family: serif;
+        //font-family: serif;
         font-size: small;
         font-weight: bolder;
     }
@@ -384,7 +384,7 @@ margin-left: 7px;
 margin-top: 0px;
 }
 .user-comment, .comment-text{
-    font-family: serif;
+    //font-family: serif;
     font-size: small!important;
 }
 .user-comment{
@@ -403,32 +403,46 @@ margin-top: 0px;
 }
 .prof-name-area{
     width: 227px;
+    height: 70px;
 }
 .firstheader{
-float:left;
-margin-left:5%;
-color:white;
- top:10px;
-  position:relative;
+    color: #FFFFFF;
+    float: left;
+    margin-left: 5%;
+    position: relative;
+    top: 10px;
+    width: 109px;
 }
 .secheader{
-float:left;
- margin-left: 6%;
- color:white; 
- top:10px; 
- position:relative;
+    color: #FFFFFF;
+    float: left;
+    margin-left: 5%;
+    position: relative;
+    top: 10px;
+    width: 90px;
 }
 .thirdheader{
-float:left;
- margin-left: 8%;
- color:white; 
- top:10px; 
- position:relative;
+    color: #FFFFFF;
+    float: right;
+    margin-left: 3%;
+    position: relative;
+    top: 10px;
 }
 .headerinfo{
   
-font-family: serif;
-font-size: 23px;
-font-weight: bolder;
+    float: left;
+    //font-family: serif;
+    font-size: 22px;
+    font-weight: bolder;
+    height: inherit;
+    position: relative;
+    width: 90%;
 }
+.closer{
+    float: right;
+    height: inherit;
+    margin-top: 3.5%;
+    //position: absolute;
+    top: 12px;
+    //width: 10%;
 }
