--- a/html/pages/team/templates/header.html
+++ b/html/pages/team/templates/header.html
@@ -7,7 +7,7 @@
             <h4>{{org_sport_link_obj.sport.sport_name}} | {{complevels_obj.complevel_name}} | {{seasons_obj.season_name}} '{{year}}</h4>
             <a href="javascript: void(0);" title="Edit Team">Edit Team</a>
             
-            <div id="vote-view"></div>
+            <div id="votes-area-h"></div>
     </div>
 	
     <!--div class="span4 textcenter">
