--- a/html_build/css/app.css
+++ b/html_build/css/app.css
@@ -236,6 +236,20 @@ div.image-item-container > img{
     position:absolute;
     top:0px;
 }
+#votes-area-h a.team-action-h{
+    background-color: #9cca3c;
+}
+#votes-area-h a.follow-action-h{
+    background-color:#33aeab;
+}
+#votes-area-h a.team-noaction-h{
+    background-color: #9cca3c;
+    opacity: .5;
+}
+#votes-area-h a.follow-noaction-h{
+    background-color:#33aeab;
+    opacity: .5;
+}
 .action-block{
   
     margin:8px;
@@ -1156,4 +1170,19 @@ margin-top:10px;
 .remove-item {
 	opacity: 0.5;
 	pointer-events: none;
+}
+#vote-view, #votes-area-h {
+	position: relative;
+	height: 40px;
+	float: right;
+	top: -23px;
+	right: 10px;
+}
+#vote-view .action-block, #votes-area-h .vote, #votes-area-h .follow {
+	opacity: 1;
+	width: 55px;
+	margin-right: 10px;
+	display: inline-block;
+    padding:4px;
+    text-align: center;
 }
