--- a/html/usercontrols/photo-player/photoPlayer.css
+++ b/html/usercontrols/photo-player/photoPlayer.css
@@ -274,7 +274,7 @@ div.right-arrow-container > img{
 }
 
 ul#tags-list {
-	margin: 5px 0 0 5px;
+	margin: 5px 0 60px 5px;
 }
 
 ul#tags-list li {
@@ -408,7 +408,7 @@ margin-top: 0px;
 .firstheader{
     color: #FFFFFF;
     float: left;
-    margin-left: 5%;
+    margin-right: 1%;
     position: relative;
     top: 10px;
     width: 109px;
@@ -416,33 +416,71 @@ margin-top: 0px;
 .secheader{
     color: #FFFFFF;
     float: left;
-    margin-left: 5%;
-    position: relative;
+   // margin-left: 5%;
+     position: relative;
     top: 10px;
-    width: 90px;
+   // width: 90px;
 }
 .thirdheader{
-    color: #FFFFFF;
+   color: #FFFFFF;
     float: right;
-    margin-left: 3%;
+    margin-left: 6%;
     position: relative;
     top: 10px;
+    width: 31px;
 }
 .headerinfo{
-  
+    color: #FFFFFF;
     float: left;
     //font-family: serif;
-    font-size: 22px;
+    font-size: 16px;
     font-weight: bolder;
     height: inherit;
-    position: relative;
+   // position: relative;
     width: 90%;
 }
 .closer{
     float: right;
     height: inherit;
-    margin-top: 3.5%;
-    //position: absolute;
-    top: 12px;
-    //width: 10%;
+    margin-top: 2.5%;
+    width: 10%;
 }
+.modal-body {
+    overflow-y: hidden!important;
+     width: 100%!important;
+}
+.name{
+    float: left;
+    height: inherit;
+    padding-left: 3%;
+    width: 30%;
+
+    }
+    .game{
+    float: left;
+    height: inherit;
+    padding-left: 8%;
+    position: inherit;
+    text-align: right;
+    width: 30%
+
+    }
+    .season{
+    float: left;
+    height: inherit;
+    position: inherit;
+    text-align: right;
+    width: 29%;
+    }
+    .topalign{
+        position: relative;
+        top: 19%;
+    }
+    .close{
+        padding-right: 9px!important;
+        color: #FFFFFF;
+        font-size: 26px;
+        opacity: 1;
+        padding-right: 9px;
+    }
+    
