--- a/html/pages/game/game.css
+++ b/html/pages/game/game.css
@@ -42,6 +42,20 @@ margin:10px;
     text-transform: uppercase;
 }
 
+#modalPopupGameEdit{
+    width:550px;
+    margin-left:-275px;
+    left:50%;
+}
+#modalPopupGameEdit .modal-body{
+    width: 98%;
+    height: 87%;
+    min-height: 87%;
+}
+#modalPopupGameEdit .modal-footer{
+    padding: 0;
+}
+
 .game-heading .game-general span:after{
     content: '  |';
 }
