--- a/html/pages/game/templates/participats-list.html
+++ b/html/pages/game/templates/participats-list.html
@@ -1,12 +1,16 @@
 <ul class="image-list">
 </ul>
+<a href="javascript: void(0);" class="add-comment" title="add comment">Add Comment</a>
+<!--a href="javascript: void(0);" class="add-comment">Add Comment</a>
+<a href="javascript: void(0);" class="add-media">Add Media</a-->
+
+
 <!--{{#target}}
 <div class="image-drop-area-outer">
 	<div class="image-drop-area" id="image-place-holder">
 		<div class="drop-text">DROP PHOTOS HERE</div>
 		<div>OR CLICK TO UPLOAD</div>
-		
 	</div>
 </div>
 {{/target}}-->
-<div class="clear"><a href="javascript: void(0);" class="see-more-h">More</a></div>
+<!--div class="clear"><a href="javascript: void(0);" class="see-more-h">More</a></div-->
