--- a/html/usercontrols/photo-player/templates/player.html
+++ b/html/usercontrols/photo-player/templates/player.html
@@ -2,6 +2,7 @@
 	<div class="image-controls">
 		<ul class="image-actions">
 			<li><a href="javascript: void(0);" class="photo-player-tag-photo-h" title="tag photo">Tag Photo</a></li>
+			<li><a href="javascript: void(0);" class="photo-player-tag-myself-h" title="tag my self">Tag Myself</a></li>
 			<li><a href="javascript: void(0);" class="photo-player-vote-h" title="vote">Vote</a></li>
 		</ul>
 
