updating gamelink sportlink to add link if none exists.

--- a/html/usercontrols/photo-player/photoPlayer.css
+++ b/html/usercontrols/photo-player/photoPlayer.css
@@ -43,11 +43,11 @@
 }
 
 .photo-player-right-area {
-    float: right;
+    /*float: right;*/
     height: 100%;
     overflow-y: auto;
-    padding-left: 2%;
-    width: 28%;
+    /*padding-left: 2%;*/
+    width: 30%;
 }
 
 .photo-player-right-area .right-area-header{
