--- a/html/pages/game/templates/participats-list.html
+++ b/html/pages/game/templates/participats-list.html
@@ -1,6 +1,9 @@
+<div class="clear">
+	<a href="javascript: void(0);" class="add-to-event" title="Add me to this Event">Add me to this Event</a>
+</div>
 <ul class="image-list">
 </ul>
-<a href="javascript: void(0);" class="add-comment" title="add comment">Add Comment</a>
+
 <!--a href="javascript: void(0);" class="add-comment">Add Comment</a>
 <a href="javascript: void(0);" class="add-media">Add Media</a-->
 
@@ -13,4 +16,4 @@
 	</div>
 </div>
 {{/target}}-->
-<!--div class="clear"><a href="javascript: void(0);" class="see-more-h">More</a></div-->
+<div class="clear"><a href="javascript: void(0);" class="see-more-h">More</a></div>
