--- a/html_build/usercontrols/photo-player/photoPlayer.css
+++ b/html_build/usercontrols/photo-player/photoPlayer.css
@@ -6,6 +6,7 @@
     margin: 0 !important;
     border-radius: 0; -webkit-border-radius: 0; -moz-border-radius: 0;
     padding: 0;
+    border:none !important;
 }
 .photo-frame-model .modal-body {
     height: 100%;
@@ -34,11 +35,11 @@
     height: 100%;
 }
 .photo-player-right-area {
-    float: right;
+    
     height: 100%;
     overflow-y: auto;
-    padding-left: 2%;
-    width: 28%;
+    
+    width: 30%;
 }
 .photo-player-right-area .right-area-header{
     height:40px;
@@ -114,7 +115,7 @@ div.right-arrow-container > img{
     overflow-x: scroll;
     overflow-y: hidden;
     position: absolute;
-    bottom:0px;
+    bottom:13px;
 }
 .thumbs-inner {
     width: 10000px;
@@ -155,9 +156,10 @@ div.right-arrow-container > img{
     padding: 5px;
     background: #CCC;
     float: left;
+    margin-left: 5px;
 }
 .image-actions li:first-child {
-    margin-right: 5px;
+   
 }
 .image-actions li a {
     color: #FFF;
@@ -179,6 +181,10 @@ div.right-arrow-container > img{
 }
 .tags-name > span {
 	float: left;
+    width:100%;
+}
+.tags-name span a{
+    display: inline-block;
 }
 .tags-name > span > a img {
     height: 60px;
@@ -213,7 +219,7 @@ div.right-arrow-container > img{
     z-index: 9999;
 }
 ul#tags-list {
-	margin: 5px 0 0 5px;
+	margin: 5px 0 60px 5px;
 }
 ul#tags-list li {
 	margin: 5px 0 0 0;
@@ -223,12 +229,14 @@ ul#tags-list .tags-name img {
 	height: 40px;
 	float:left
 }
+ul#tags-list .tags-name a{
+    width:90%;
+}
 ul#tags-list .tags-name a span {
-	font-size: .8em;
-	width: 200px;
+	font-size: .7em;
+	width: 100%;
 	display: inline-block;
 	margin-left: 5px;
-	white-space:nowrap; 
 	text-overflow:ellipsis;
 	overflow:hidden; 
 	margin-left: 20px;
@@ -239,45 +247,49 @@ ul#tags-list .tags-number {
 	margin-left: 10px;
 	width: 4px;
 }
-.game-match-name{
-        background-color: #948BDE;
-        color: white;
-        height: 45px;
-        font-size: small;
-        
-    }
-    .game-score{
-        background-color: #4C3DC7;
-        color: white;
-        height: 45px;
-        text-align: center;
-        width: 65px;
-        float: left!important;
-        font-size: 2.2em;
-        font-weight: bolder;
-    }
-    .game-match-name1{
-        background-color: #E69F71;
-        float: left;
-        width: 70%;
-        color: white;
-        height: 45px;
-        font-size: small;
-        
-    }
-    .game-score1{
-        background-color: #D45F10;
-        color: white;
-        height: 45px;
-        text-align: center;
-        width: 30%;
-        float: left!important;
-        font-size: 2.2em;
-        font-weight: bolder;
-    }
+#photoPlayerModal .game-match-name, #photoPlayerModal .game-match-name1{
+    color: white;
+    height: 30px;
+    font-size: small;
+    max-width: 85%;
+    width: 80%;
+    display:inline-block;
+    text-wrap:normal;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    word-wrap: normal;
+    float: left;
+    padding: 10px 0px 5px 10px;
+}
+#photoPlayerModal .game-match-name{
+    background-color: #948BDE;
+}
+#photoPlayerModal .game-match-name1{
+    background-color: #E69F71;
+}
+#photoPlayerModal .game-score, #photoPlayerModal .game-score1{
+    color: white;
+    height: 45px;
+    text-align: center;
+    width: 10%;
+    min-width: 25px;
+    float: left!important;
+    font-size: 2.2em;
+    font-weight: bolder;
+    display: inline-block;
+}
+#photoPlayerModal .game-score{
+    background-color: #4C3DC7;
+}
+#photoPlayerModal .game-score1{
+    background-color: #D45F10;
+}
+#photoPlayerModal .game-score span.scoreAlign,#photoPlayerModal .game-score1 span.scoreAlign{
+    margin:0;
+    padding: 0;
+}
     .teamName-area{
-        padding-top: 9%;
-        padding-bottom: 35%;
+    
         font-size: small;
     }
     .scoreAlign{
@@ -331,7 +343,7 @@ margin-top: 0px;
 .firstheader{
     color: #FFFFFF;
     float: left;
-    margin-left: 5%;
+    margin-right: 1%;
     position: relative;
     top: 10px;
     width: 109px;
@@ -339,30 +351,69 @@ margin-top: 0px;
 .secheader{
     color: #FFFFFF;
     float: left;
-    margin-left: 5%;
-    position: relative;
+   // margin-left: 5%;
+     position: relative;
     top: 10px;
-    width: 90px;
+   // width: 90px;
 }
 .thirdheader{
-    color: #FFFFFF;
+   color: #FFFFFF;
     float: right;
-    margin-left: 3%;
+    margin-left: 6%;
     position: relative;
     top: 10px;
+    width: 31px;
 }
 .headerinfo{
-  
+    color: #FFFFFF;
     float: left;
-    font-size: 22px;
-    font-weight: normal;
+   
+    font-size: 16px;
+    font-weight: bolder;
     height: inherit;
-    position: relative;
+   
     width: 90%;
 }
 .closer{
     float: right;
     height: inherit;
-    margin-top: 3.5%;
-    top: 12px;
+    margin-top: 2.5%;
+    width: 10%;
 }
+.modal-body {
+    overflow-y: hidden!important;
+     width: 100%!important;
+}
+.name{
+    float: left;
+    height: inherit;
+    padding-left: 3%;
+    width: 30%;
+    }
+    .game{
+    float: left;
+    height: inherit;
+    padding-left: 8%;
+    position: inherit;
+    text-align: right;
+    width: 30%
+    }
+    .season{
+    float: left;
+    height: inherit;
+    position: inherit;
+    text-align: right;
+    width: 29%;
+    }
+    .topalign{
+        position: relative;
+        top: 19%;
+    }
+    .close{
+        padding-right: 9px!important;
+        color: #FFFFFF;
+        font-size: 26px;
+        opacity: 1;
+        padding-right: 9px;
+    }
+ 
