--- a/html_build/pages/game/templates/participats-list.html
+++ b/html_build/pages/game/templates/participats-list.html
@@ -1,11 +1,18 @@
+<div class="clear">
+	<a href="javascript: void(0);" class="add-to-event" title="Add me to this Event">Add me to this Event</a>
+</div>
 <ul class="image-list">
 </ul>
+
+<!--a href="javascript: void(0);" class="add-comment">Add Comment</a>
+<a href="javascript: void(0);" class="add-media">Add Media</a-->
+
+
 <!--{{#target}}
 <div class="image-drop-area-outer">
 	<div class="image-drop-area" id="image-place-holder">
 		<div class="drop-text">DROP PHOTOS HERE</div>
 		<div>OR CLICK TO UPLOAD</div>
-		
 	</div>
 </div>
 {{/target}}-->
